--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1792,6 +1792,7 @@ section {
   margin-bottom: 15px;
   padding-bottom: 15px;
   position: relative;
+  text-align: center;
 }
 
 .hero .stats-item span:after {
@@ -1813,6 +1814,7 @@ section {
   font-family: var(--font-primary);
   font-size: 15px;
   font-weight: 600;
+  text-align: center; /* Add this line */
 }
 
 /*--------------------------------------------------------------
