--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1718,6 +1718,7 @@ section {
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
+  height: 100vh;
   min-height: 50vh;
   background-color: var(--color-secondary);
   background-image: url("../img/Untitled_Artwork[2].jpg");
