--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1721,7 +1721,7 @@ section {
   height: 100vh;
   min-height: 50vh;
   background-color: var(--color-secondary);
-  background-image: url("../img/Untitled_Artwork[2].jpg");
+  background-image: url("../img/logo2.JPG");
   background-size: cover;
   background-position: center;
   position: relative;
