--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1724,6 +1724,8 @@ section {
   background-image: url("../img/logo2.JPG");
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+  object-fit: cover;
   position: relative;
   padding: 120px 0 60px 0;
   color: rgba(255, 255, 255, 0.8);
