--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1723,6 +1723,7 @@ section {
   background-color: var(--color-secondary);
   background-image: url("../img/logo2.JPG");
   background-size: 100% auto;
+  background-position: center calc(100% - 50px);
   background-position: center;
   background-repeat: no-repeat;
   object-fit: cover;
