--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1722,7 +1722,7 @@ section {
   min-height: 50vh;
   background-color: var(--color-secondary);
   background-image: url("../img/logo2.JPG");
-  background-size: 100% cover;
+  background-size: 100% auto;
   background-position: center calc(100% - 50px);
   background-position: center;
   background-repeat: no-repeat;
