--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1717,8 +1717,9 @@ section {
 # Hero Section
 --------------------------------------------------------------*/
 .hero {
-  width: 100vh;
+  width: 100%;
   height: 100vh;
+  min-width: 100%;
   min-height: 50vh;
   background-color: var(--color-secondary);
   background-image: url("../img/logo2.JPG");
