--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1727,7 +1727,7 @@ section {
   background-position: center calc(100% - 50px);
   background-position: center;
   background-repeat: no-repeat;
-  object-fit: cover;
+  object-fit: fill;
   position: relative;
   padding: 120px 0 60px 0;
   color: rgba(255, 255, 255, 0.8);
