--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1719,13 +1719,10 @@ section {
 .hero {
   width: 100%;
   height: 100vh;
-  min-width: 100%;
-  min-height: 50vh;
+  min-height: 25em;
   background-color: var(--color-secondary);
   background-image: url("../img/logo2.JPG");
   background-size: 100% auto;
-  background-position: center calc(100% - 50px);
-  background-position: center;
   background-repeat: no-repeat;
   object-fit: fill;
   position: relative;
