--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1723,6 +1723,7 @@ section {
   background-color: var(--color-secondary);
   background-image: url("../img/logo3.JPG");
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   object-fit: fill;
   position: relative;
