--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1223,6 +1223,10 @@ section {
   font-size: 18px;
 }
 
+.team .member img {
+  height: 200px; 
+  object-fit: cover;
+}
 .team .member span {
   font-style: italic;
   display: block;
