--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1224,7 +1224,8 @@ section {
 }
 
 .team .member img {
-  height: 200px; 
+  max-height: 400px;
+  width: 100%;
   object-fit: cover;
 }
 .team .member span {
