--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -328,7 +328,7 @@ section {
     font-family: var(--font-primary);
     font-size: 16px;
     font-weight: 400;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(255, 255, 255, 0.6);
     white-space: nowrap;
     transition: 0.3s;
   }
@@ -1725,7 +1725,7 @@ section {
   height: 100vh;
   min-height: 25em;
   background-color: var(--color-secondary);
-  background-image: url("../img/IMG_PT\ SKE\ \(16\)-Rev2.jpg");
+  background-image: url("../img/logo3.JPG");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
