--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1262,7 +1262,7 @@ section {
 #team .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .align-bottom .col-lg-2:first-child,
