--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1224,7 +1224,7 @@ section {
 }
 
 .team .member img {
-  max-height: 300px;
+  max-height: 310px;
   object-fit: cover;
 }
 
@@ -1292,7 +1292,7 @@ section {
 
 .team .Director img {
   min-height: 486px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .team .Director span {
