--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1565,7 +1565,7 @@ section {
   height: 100vh;
   min-height: 25em;
   background-color: var(--color-secondary);
-  background-image: url("../img/IMG_0382.JPG");
+  background-image: url("../img/logo3.JPG");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
