--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,7 +64,7 @@ section {
   text-transform: uppercase;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #001973;
+  color: #00197377;
   position: relative;
   z-index: 2;
   margin-bottom: 20px;
